<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.ciera</groupId>
  <artifactId>cmcc</artifactId>
  <packaging>pom</packaging>
  <version>2.5.4-SNAPSHOT</version>
  <name>Ciera Model Compiler Collection</name>
  <description>Java model compiler and tools for xtUML models</description>
  <url>https://github.com/xtuml/ciera</url>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://opensource.org/licenses/Apache-2.0</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Levi Starrett</name>
      <email>levi@roxsoftware.com</email>
      <organization>Brooklyn, LLC</organization>
    </developer>
    <developer>
      <name>Alasdar Mullarney</name>
      <email>alasdar@sbcglobal.net</email>
      <organization>Maile Technical</organization>
    </developer>
    <developer>
      <name>John Wolfe</name>
      <email>johnwolfe@mailetechnical.com</email>
      <organization>Maile Technical</organization>
    </developer>
  </developers>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <bpLoc>${env.HOME}/git/bridgepoint</bpLoc>
    <mcLoc>${env.HOME}/git/mc</mcLoc>
  </properties>
  <scm>
    <connection>scm:git:git@github.com:MaileTechnical/ciera.git</connection>
    <developerConnection>scm:git:git@github.com:MaileTechnical/ciera.git</developerConnection>
    <url>https://github.com/MaileTechnical/ciera</url>
    <tag>HEAD</tag>
  </scm>
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>Maile Technical Apache Maven Packages on GitHub</name>
      <url>https://maven.pkg.github.com/mailetechnical/ciera</url>
    </repository>
  </distributionManagement>
  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/mailetechnical/*</url>
      <releases><enabled>true</enabled></releases>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>github</id>
      <url>https://maven.pkg.github.com/mailetechnical/*</url>
      <releases><enabled>true</enabled></releases>
      <snapshots><enabled>true</enabled></snapshots>
    </pluginRepository>
  </pluginRepositories>
  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <modules>
    <module>runtime</module>
    <module>tool-core</module>
    <module>tool-sql</module>
    <module>tool-template</module>
    <module>ciera-maven-plugin</module>
  </modules>
</project>